variables.RunHalf.scala.error
Compilation error:
RunHalf:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (couleur = getGroundColor()){
              ^